added other tests